# net-relay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  config.example.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/net-relay-api/: Cargo.toml
crates/net-relay-api/src/: auth.rs  handlers.rs  lib.rs  router.rs
crates/net-relay-core/: Cargo.toml
crates/net-relay-core/src/: config.rs  connection.rs  error.rs  lib.rs  stats.rs
crates/net-relay-core/src/proxy/: http.rs  mod.rs  relay.rs  socks5.rs
crates/net-relay-server/: Cargo.toml
crates/net-relay-server/src/: main.rs
docs/: CLIENT_SETUP.md  DEPLOYMENT.md  RELEASE.md
frontend/: index.html  package.json
frontend/src/: main.js  style.css
scripts/: dev.sh  log.sh  pre-push.sh  restart.sh  start.sh  status.sh  stop.sh
scripts/deploy/: dev.bat  dev.sh  log.bat  log.sh  restart.bat  restart.sh  start.bat  start.sh  status.bat  status.sh  stop.bat  stop.sh
