[package]
name = "net-relay-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API for net-relay dashboard"

[dependencies]
net-relay-core = { path = "../net-relay-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
