[package]
name = "net-relay-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core proxy logic for net-relay"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
