[package]
name = "net-relay-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Net-relay proxy server binary"

[[bin]]
name = "net-relay"
path = "src/main.rs"

[dependencies]
net-relay-core = { path = "../net-relay-core" }
net-relay-api = { path = "../net-relay-api" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
